option java_package = "com.example.test";

message Person {
    required string name = 1;
    required int32 id = 2;
    optional string email = 3;

    enum PhoneType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    }

    message PhoneNumber {
        required string number = 1;
        //optional PhoneType type = 2 [default = HOME];
        optional string type = 2;
    }

    message PhoneNumberInner {
        optional PhoneNumber array = 1;
    }

    message PhoneNumberOuter {
        repeated PhoneNumberInner bag = 1;
    }

    optional PhoneNumberOuter phone = 4;
}