package com.github.saurfang.parquet.proto;

message SimpleMessage {
    optional double double = 1;
    optional float float = 2;
    optional int32 int = 3;
    optional int64 long = 4;
    optional uint32 uint = 5;
    optional uint64 ulong = 6;
    optional sint32 sint = 7;
    optional sint64 slong = 8;
    optional fixed32 fint = 9;
    optional fixed64 flong = 10;
    optional sfixed32 sfint = 11;
    optional sfixed64 sflong = 12;
    optional bool boolean = 13;
    optional string String = 14;
    optional bytes ByteString = 15;
}
